# fastapi-classy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: basic.py  inheritance.py
fastapi_classy/: __init__.py  fastapi_classy.py  impl.py
tests/: conftest.py  data.py  test_routes.py  users.py
