[tool.poetry]
name = "fastapi-classy"
version = "0.1.0"
description = ""
authors = ["Gaganpreet Arora <me@gaganpreet.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pytest = "^6.2.5"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
